--- a/includes/styles.css
+++ b/includes/styles.css
@@ -2129,4 +2129,12 @@ input.no-border {
 frm_msg{
     color:#ff0000;
 }
+/* 20220227 added for cosi-project navBar.jsp*/
+.test_message{
+	font-weight: bold;
+	padding-left: 20px;
+    color:#009966;
+
+}
+
 
